tests/pass/comments.tc
int main() {
  // line comment
  int x = 1;
  /*
    block comment
  */
  return !(x - 1);
}
