tests/fail/call_before_definition.tc
int main() {
  return helper();
}

int helper() {
  return 1;
}
